--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
 <span class="tag is-dark">PWA</span>
 <span class="tag is-warning">Support</span>
 </div>
-<p>🔔 Push Notification Server by <b>Gotify.net</b></p>
+<p>🔔 Push Notification Software by <b>Gotify.net</b></p>
 </div>
 </footer>
 
