--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
 <div class="column is-half is-offset-one-quarter">
 <br>
 <h1 class="title">Gotify</h1>
-<p>Send Real-Time 🔥 Push Notification to Gotify Server</p>
+<p>Send Real-Time 🔥 Push Notification to Gotify Server</p><br>
+<p><b>Note:</b> you need to Enable a Cors headers (Cross-Origin Resource Sharing) to Access your API on Third-party Websites.</p>
 </div>
 </div>
 </section>
