--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="theme-color" content="#ffffff">
-<link rel="shortcut icon" href="icons/Icon-48.png"/>
+<link rel="shortcut icon" href="assets/icons/Icon-48.png"/>
 <link rel="canonical" href="https://push.santhoshveer.com/" />
 
 <title>Gotify Push Notification</title>
@@ -19,13 +19,13 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="white-translucent">
 <meta name="apple-mobile-web-app-title" content="Gty Push">
 
-<link rel="apple-touch-icon" href="icons/Icon-48.png">
-<link rel="apple-touch-icon" sizes="72x72" href="icons/Icon-72.png">
-<link rel="apple-touch-icon" sizes="96x96" href="icons/Icon-96.png">
-<link rel="apple-touch-icon" sizes="144x144" href="icons/Icon-144.png">
-<link rel="apple-touch-icon" sizes="192x192" href="icons/Icon-192.png">
-<link rel="apple-touch-icon" sizes="256x256" href="icons/Icon-256.png">
-<link rel="apple-touch-icon" sizes="512x512" href="icons/Icon-512.png">
+<link rel="apple-touch-icon" href="assets/icons/Icon-48.png">
+<link rel="apple-touch-icon" sizes="72x72" href="assets/icons/Icon-72.png">
+<link rel="apple-touch-icon" sizes="96x96" href="assets/icons/Icon-96.png">
+<link rel="apple-touch-icon" sizes="144x144" href="assets/icons/Icon-144.png">
+<link rel="apple-touch-icon" sizes="192x192" href="assets/icons/Icon-192.png">
+<link rel="apple-touch-icon" sizes="256x256" href="assets/icons/Icon-256.png">
+<link rel="apple-touch-icon" sizes="512x512" href="assets/icons/Icon-512.png">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css" integrity="sha256-D9M5yrVDqFlla7nlELDaYZIpXfFWDytQtiV+TaH6F1I=" crossorigin="anonymous" />
 <link rel="stylesheet" type="text/css" href="assets/built/style.css">
