--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no, minimal-ui">
 <meta name="theme-color" content="#ffffff">
 <link rel="shortcut icon" href="assets/icons/Icon-48.png"/>
 <link rel="canonical" href="https://push.santhoshveer.com/" />
