--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 <br>
 <h1 class="title">Gotify</h1>
 <p>Send Real-Time 🔥 Push Notification to Gotify Server</p><br>
-<p><b>Note:</b> you need to Enable a Cors headers (Cross-Origin Resource Sharing) to Access your API on Third-party Websites.</p>
+<p><b>Note:</b> you need to Enable a Cors headers (Cross-Origin Resource Sharing) to Access your API on our website.</p>
 </div>
 </div>
 </section>
