--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no, minimal-ui">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#ffffff">
 <link rel="shortcut icon" href="assets/icons/Icon-48.png"/>
 <link rel="canonical" href="https://push.santhoshveer.com/" />
@@ -27,13 +27,13 @@
 <link rel="apple-touch-icon" sizes="256x256" href="assets/icons/Icon-256.png">
 <link rel="apple-touch-icon" sizes="512x512" href="assets/icons/Icon-512.png">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.2/css/bulma.min.css" integrity="sha256-qS+snwBgqr+iFVpBB58C9UCxKFhyL03YHpZfdNUhSEw=" crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css" integrity="sha512-ADrqa2PY1TZtb/MoLZIZu/Z/LlPaWQeDMBV73EMwjGam43/JJ5fqW38Rq8LJOVGCDfrJeOMS3Q/wRUVzW5DkjQ==" crossorigin="anonymous" />
 <link rel="stylesheet" type="text/css" href="assets/built/style.css">
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
 
 <link rel="manifest" href="manifest.json">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -171,7 +171,7 @@
                         if (outcome === 'accepted') {
                             console.log('Your PWA has been installed')
                         } else {
-                            console.log('User chose to not install your PWA')
+                            console.log('User choose to not install your PWA')
                         }
                         deferredPrompt = null
                     })
